# tagteam

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  pyrightconfig.json
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: _sqlmodel_compat.py  auth.py  config.py  database.py  main.py  models.py
backend/app/routes/: auth_routes.py  project_routes.py  session_routes.py  upload_routes.py
backend/app/services/: __init__.py  conflict.py  iam.py  taxonomy.py  workload.py
backend/tests/: conftest.py  test_export_import.py  test_workload.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/components/: DropZone.jsx  ItemDisplay.jsx  Layout.jsx  TagSearch.jsx  UserAutocomplete.jsx
frontend/src/i18n/: de.json  en.json
frontend/src/lib/: api.js  auth.js  batches.js  constants.js  version.js
frontend/src/pages/: ConfigPage.jsx  HomePage.jsx  LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx  ReviewPage.jsx  UsersPage.jsx  WorkspacePage.jsx
k8s/base/: backend.yaml  configmap.yaml  deploy.yml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml
k8s/overlays/prod/: kustomization.yaml
