[project]
name = "tagteam-backend"
version = "3.1.0"
description = "TagTeam API - universal annotation tool backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "aiofiles>=24.1",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = false